# django_project_practice

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
interviews/: admin.py  forms.py  models.py  urls.py  views.py
interviews/migrations/: 0001_initial.py  0002_interview_result.py  0003_alter_interview_company_name_alter_interview_rating_and_more.py  0004_interview_user.py  0007_interview_favorited_by.py  0008_alter_interview_favorited_by.py
interviews/templates/interviews/: edit.html  favorite.html  home.html  index.html  new.html  show.html
my_project/: settings.py  urls.py
myapp/: views.py
myapp/templates/: home.html
myapp/templates/myapp/: home.html
myapp2/: urls.py  views.py
myapp2/templates/myapp2/: about.html  home.html
notes/: 0425.md  0428.md  CRUD_note.md  Django RESTful 設計與視圖職責分離.md  Django login() 函數的完整流程.md  Django messages.md  Django 使用 `ManyToMany` 關聯模型處理「動態切換按讚狀態」.md  Django 登入檢查 `login_required` 裝飾器：處理 `next` 重定向.md  HTMX和Django實現局部更新與後端渲染.md  HTMX簡介.md  ManyToMany關聯模型.md  N+1_problem.md  api.md  django_crud_notes.md  django_queryset.md  為 Django Model 新增 User 欄位的資料處理技巧.md
pages/: urls.py  views.py
pages/templates/pages/: about.html  contact.html  index.html  payment.html
src/: app.js
src/scripts/: app.js  braintree.js  message.js
static/assets/scripts/: app.js
templates/layouts/: default.html
templates/shared/: messages.html  navbar.html
users/: forms.py  urls.py  views.py
users/templates/users/: sign_in.html  sign_up.html
